[gd_scene load_steps=11 format=2]

[ext_resource path="res://menu/Settings.gd" type="Script" id=1]
[ext_resource path="res://sprites/Fullscreens-11.png.png" type="Texture" id=2]
[ext_resource path="res://fonts/Ramabhadra/Ramabhadra-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/text.png" type="Texture" id=4]
[ext_resource path="res://sprites/gems.png" type="Texture" id=5]
[ext_resource path="res://just-a-110-bpm-click.ogg" type="AudioStream" id=6]
[ext_resource path="res://sprites/bar.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
extra_spacing_top = -18
font_data = ExtResource( 3 )

[node name="Settings" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 300, 256 )
texture = ExtResource( 2 )

[node name="NoteWidthText" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 200.0
margin_right = 210.0
margin_bottom = 240.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Note Width:"

[node name="NoteHeightText" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 239.61
margin_right = 210.0
margin_bottom = 279.61
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Note Height:"

[node name="NoteWidth" type="RichTextLabel" parent="."]
margin_left = 203.0
margin_top = 200.0
margin_right = 265.0
margin_bottom = 240.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "1.0"

[node name="NoteHeight" type="RichTextLabel" parent="."]
margin_left = 203.0
margin_top = 240.0
margin_right = 265.0
margin_bottom = 280.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "1.0"

[node name="NoteDirectionText" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 288.496
margin_right = 240.0
margin_bottom = 328.496
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Note Direction:"

[node name="NoteDirection" type="RichTextLabel" parent="."]
margin_left = 300.0
margin_top = 288.0
margin_right = 400.0
margin_bottom = 328.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Down"

[node name="AdjustLagText" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 340.0
margin_right = 240.0
margin_bottom = 380.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Adjust Lag:"

[node name="AdjustLagMs" type="RichTextLabel" parent="."]
margin_left = 300.0
margin_top = 340.0
margin_right = 400.0
margin_bottom = 380.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "0.0 ms"

[node name="AdjustLagMs2" type="RichTextLabel" parent="."]
margin_left = 472.404
margin_top = 375.018
margin_right = 572.404
margin_bottom = 415.018
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Press P"

[node name="ControlsText" type="RichTextLabel" parent="."]
margin_left = 180.0
margin_top = 440.0
margin_right = 480.0
margin_bottom = 520.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "
Select Setting: Arrow UP/DOWN
Change Value: Arrow LEFT/RIGHT
Done: ENTER
"

[node name="SettingsArrow" type="Sprite" parent="."]
position = Vector2( 60, 215 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 69.2294, 299.102, 201.45, 104.9 )

[node name="ScaleGem" type="Sprite" parent="."]
position = Vector2( 318, 234 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="BeatPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Invertible" type="Node2D" parent="."]

[node name="LagBar" type="Sprite" parent="Invertible"]
position = Vector2( 500, 375 )
scale = Vector2( 0.25, 1 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 10, 21, 330, 8 )
